Bug 1857413 - Set min-height on subscribe dialog's <dialog> element. r=mkmelin
This isn't perfect, the dialog is slightly too short on Windows, but it's better than it was. It's the same thing we do on several other dialogs.

Differential Revision: https://phabricator.services.mozilla.com/D226585

--HG--
extra : amend_source : faf1e1ef453345123a194f1881530e8f186334c7

--- a/mail/themes/shared/mail/subscribe.css
+++ b/mail/themes/shared/mail/subscribe.css
@@ -8,7 +8,7 @@
 
 @import url("chrome://messenger/skin/messenger.css");
 
-#subscribeWindow {
+#subscribeWindow, dialog {
   min-width: 40em;
   min-height: 30em;
 }
